SRC/objects/QuickBooks_Token_Info__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token_Expires_in__c</fullName>
        <label>Access Token Expires in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refresh_Token_Expires_in__c</fullName>
        <label>Refresh Token Expires in(Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>QuickBooks Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QuickBooks Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>